# nonebot-plugin-bot-monitor

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nonebot_plugin_bot_monitor/: __init__.py  bot_monitor.py  config.py  mail_notifier.py  utils.py
tests/: plugin_test.py
